Change site URL to https

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Unfreeze Eclipse
 tag_text: Unfreeze Eclipse
 description: Stop killing your IDE! Unfreeze your Eclipse now!
-url: "http://unfreezeeclipse.com"
+url: "https://unfreezeeclipse.com"
 baseurl: ""
 
 font-awesome-include: true # make this false if you don't need font-awesome
